# digilog

./: .editorconfig  .gitignore  LICENSE  README.md  pyproject.toml
src/digilog/: __init__.py
